<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0D3D4"
    tools:context=".AddPhrases">



    <TextView
        android:id="@+id/mainHeading_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/add_phrases_heading"
        android:textAllCaps="true"
        android:textColor="#8E44AD"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/et_addPhrases"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/custom_edit_text_v1"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_add_phrases"
        android:layout_width="250sp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_button_v2"
        android:text="@string/btn_add_phrases_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_addPhrases"
        app:layout_constraintVertical_bias="0.012" />

</androidx.constraintlayout.widget.ConstraintLayout>
