<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslationDemo">

    <TextView
        android:id="@+id/mainHeading_06"
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/display_translated_phrases"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#8E44AD"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/translate_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading_06" />

    <Spinner
        android:id="@+id/languages_spinner"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#C397D6"
        android:src="@drawable/spinner_drop_down_arrow"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate_word" />

    <Button
        android:id="@+id/btn_translate_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_v2"
        android:padding="16dp"
        android:text="@string/btn_translate_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_pronounce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_spinner" />

    <Button
        android:id="@+id/btn_pronounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_button_v2"
        android:onClick="pronounceClick"
        android:padding="16dp"
        android:text="@string/btn_pronounce"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_spinner" />

    <ImageButton
        android:id="@+id/btn_home_v2"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button_v5"
        android:contentDescription="@string/home_button"
        android:src="@drawable/home_button_v2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pronounce" />

</androidx.constraintlayout.widget.ConstraintLayout>